# rust-text-editor

./: .gitignore  Cargo.toml  README.md  build-dist.sh
.github/workflows/: release.yaml  release.yml
src/: main.rs  terminal_editor.rs  tui.rs
src/core/: actions.rs  buffer.rs  edit_history.rs  mod.rs  selection.rs  shortcuts.rs  tabs.rs  updater.rs
src/gui/: app.rs  editor.rs  mod.rs  state.rs  themes.rs
src/terminal_editor/: drawing.rs  main_error_wrapper.rs  shortcuts.rs  terminal.rs
src/tui/: caret.rs  drawing.rs  mod.rs  syntax.rs  terminal.rs  view.rs
src/tui/view/: clipboard.rs  graphemes.rs  keyboard.rs  mod.rs  mouse.rs  render.rs  search.rs  selection.rs
