[package]
name = "quick-notepad"
version = "1.0.1"
authors = ["Filip Domanski"]
edition = "2021"
description = "A modern dual-mode text editor for terminal and GUI"
repository = "https://github.com/DomanskiFilip/quick_notepad"
license = "custom"
keywords = ["editor", "text-editor", "tui", "gui", "terminal"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "quick"
path = "src/main.rs"

[package.metadata.bundle]
name = "Quick Notepad"
identifier = "com.filipdomanski.quicknotepad"
icon = ["assets/icon.png"]
resources = []
copyright = "© 2026 Filip Domanski"
category = "Utility"
short_description = "Fast and simple text editor"
long_description = "A minimalist text editor with both terminal and GUI interfaces. Supports 25+ languages with syntax highlighting."

[package.metadata.bundle.linux]
desktop_file = "assets/quick-notepad.desktop"

[dependencies]
crossterm = "0.29"
arboard = { version = "3.4", features = ["wayland-data-control"] }
unicode-segmentation = "1.10"
unicode-width = "0.2.2"

# GUI dependencies
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["syntect"] }

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For auto-update functionality
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dependencies.atspi-common]
version = "0.13.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true